Remove API URL from config
The Kontakt.io system consists of two APIs with the same URLs for all
customers.
